[package]
name = "lightningcss-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.4.0"
lightningcss = "1.0.0-alpha.51"
clap = {version = "4", features = ["derive"] }
toml = "0.8.8"
serde = "1.0.192"
